[package]
name = "base64-compat"
version = "1.0.1"
authors = ["Steven Roose <steven@stevenroose.org>"]
description = "encodes and decodes base64 as bytes or utf8 - compatible with older Rust versions"
repository = "https://github.com/stevenroose/rust-base64-compat"
readme = "README.md"
keywords = ["base64", "utf8", "encode", "decode"]
categories = ["encoding"]
license = "MIT/Apache-2.0"

[lib]
name = "base64"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
byteorder = "=1.4.1"

[dev-dependencies]
criterion = "0.2"
rand = "0.6.1"
doc-comment = "0.3"

[profile.bench]
# Useful for better disassembly when using `perf record` and `perf annotate`
debug = true
